# OpenBee

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
assets/: config.xml
crates/openbee_agent/: Cargo.toml
crates/openbee_agent/src/: agent.rs  executor.rs  lib.rs  skill.rs  task.rs
crates/openbee_agent/src/skills/: browser_skill.rs  mod.rs  system_skill.rs  wallet_skill.rs
crates/openbee_browser/: Cargo.toml
crates/openbee_browser/src/: ai_reader.rs  browser.rs  lib.rs  page_parser.rs  session.rs
crates/openbee_core/: Cargo.toml
crates/openbee_core/src/: lib.rs
crates/openbee_core/src/ecs/: component.rs  entity.rs  mod.rs  world.rs
crates/openbee_core/src/events/: event_bus.rs  game_events.rs  input_events.rs  mod.rs
crates/openbee_core/src/input/: gamepad.rs  input_manager.rs  keybindings.rs  keyboard.rs  mod.rs  mouse.rs  touch.rs
crates/openbee_core/src/physics/: body.rs  collision.rs  debug_draw.rs  world.rs
crates/openbee_core/src/process/: manager.rs  mod.rs  process.rs
crates/openbee_core/src/render/: juice.rs  mod.rs  particle.rs  screenshot.rs  sdl2_renderer.rs  web_renderer.rs
crates/openbee_core/src/resource/: cache.rs  hot_reload.rs  manager.rs  mod.rs
crates/openbee_core/src/resource/loaders/: ani.rs  midi.rs  pal.rs  pcx.rs  pid.rs  png.rs  wav.rs  wwd.rs  xml.rs
crates/openbee_core/src/scene/: camera_effects.rs  hud_node.rs  mod.rs  scene.rs  tile_node.rs
crates/openbee_core/src/security/: mod.rs  sandbox.rs
crates/openbee_core/src/util/: converters.rs  i18n.rs  math.rs  mod.rs  profiler.rs  string_util.rs  tween.rs
crates/openbee_editor/: Cargo.toml
crates/openbee_editor/src/: actor_editor.rs  editor_app.rs  editor_ui.rs  lib.rs  preview.rs  property_panel.rs  tile_editor.rs
crates/openbee_mod/: Cargo.toml
crates/openbee_mod/src/: mod_loader.rs  mod_manifest.rs  mod_registry.rs
crates/openbee_net/: Cargo.toml
crates/openbee_net/src/: client.rs  lib.rs  lobby.rs  protocol.rs  replay.rs  server.rs  sync.rs
crates/openbee_plugin/: Cargo.toml
crates/openbee_plugin/src/: asset_override.rs  lib.rs  mod_loader.rs  mod_registry.rs
crates/openbee_scripting/: Cargo.toml
crates/openbee_scripting/src/: bindings.rs  lib.rs  lua_engine.rs  script_component.rs
crates/openbee_scripting/src/api/: actor_api.rs  audio_api.rs  input_api.rs  mod.rs  physics_api.rs  ui_api.rs
crates/openbee_wallet/: Cargo.toml
crates/openbee_wallet/src/: address.rs  hd.rs  keystore.rs  lib.rs  machine_binding.rs  mnemonic.rs  rpc.rs  safety.rs  security.rs  transaction.rs  wallet.rs
crates/openbee_wallet/src/chains/: ethereum.rs  evm.rs  mod.rs  solana.rs
crates/openbee_wallet/src/dex/: approval.rs  jupiter.rs  mod.rs  oneinch.rs  pancakeswap.rs  swap.rs  uniswap.rs
crates/openclaw_core/: Cargo.toml
crates/openclaw_core/src/: lib.rs
crates/openclaw_core/src/audio/: audio_engine.rs  mod.rs  music.rs  sound.rs  spatial.rs
crates/openclaw_core/src/ecs/: component.rs  entity.rs  system.rs
crates/openclaw_core/src/events/: event_bus.rs  game_events.rs
crates/openclaw_core/src/input/: gamepad.rs  input_manager.rs  keybindings.rs  touch.rs
crates/openclaw_core/src/physics/: debug_draw.rs  mod.rs  world.rs
crates/openclaw_core/src/process/: manager.rs  powerup.rs
crates/openclaw_core/src/render/: animation.rs  mod.rs  particle.rs  renderer.rs  screenshot.rs  shader.rs  sprite.rs
crates/openclaw_core/src/resource/loaders/: ani.rs  midi.rs  mod.rs  pcx.rs  wwd.rs  xml.rs
crates/openclaw_core/src/scene/: actor_node.rs  mod.rs  node.rs  tile_node.rs
crates/openclaw_core/src/util/: converters.rs  math.rs  mod.rs  profiler.rs  string_util.rs
crates/openclaw_editor/: Cargo.toml
crates/openclaw_editor/src/: lib.rs  preview.rs  tile_editor.rs
crates/openclaw_game/: Cargo.toml
crates/openclaw_game/src/: actor_controller.rs  actor_templates.rs  game_app.rs  game_logic.rs  game_saves.rs  game_view.rs  lib.rs
crates/openclaw_game/src/ai/: crumbling_peg.rs  enemy_ai.rs  projectile_ai.rs  punk_rat.rs  toggle_peg.rs
crates/openclaw_game/src/ai/bosses/: aquatis.rs  gabriel.rs  marrow.rs  mod.rs  red_tail.rs
crates/openclaw_game/src/components/: ammo.rs  animation.rs  aura.rs  checkpoint.rs  collision.rs  controllable.rs  destroyable.rs  explodeable.rs  glitter.rs  health.rs  inventory.rs  kinematic.rs  life.rs  loot.rs  mod.rs  physics.rs  pickup.rs  powerup.rs  render.rs  score.rs  sound.rs  transform.rs
crates/openclaw_game/src/components/audio/: global_ambient.rs  local_ambient.rs  mod.rs
crates/openclaw_game/src/components/hazards/: area_damage.rs  destructible_terrain.rs  floor_spike.rs  gravity_zone.rs  mod.rs  saw_blade.rs  spring_board.rs  stepping_ground.rs  water_zone.rs
crates/openclaw_game/src/components/movement/: advanced.rs  conveyor_belt.rs  followable.rs  mod.rs  one_way_platform.rs  path_elevator.rs  predefined_move.rs  rope.rs
crates/openclaw_game/src/levels/: level_data.rs  level_manager.rs
crates/openclaw_game/src/systems/: accessibility_system.rs  achievement_system.rs  advanced_movement_system.rs  ai_system.rs  animation_system.rs  audio_system.rs  checkpoint_system.rs  combat_system.rs  cutscene_system.rs  destructible_system.rs  hazard_system.rs  input_system.rs  mod.rs  movement_system.rs  particle_system.rs  physics_system.rs  pickup_system.rs  powerup_system.rs  render_system.rs  score_system.rs  spawner_system.rs  trigger_system.rs  water_system.rs  weather_system.rs
crates/openclaw_game/src/ui/: console.rs  dialogue.rs  hud.rs  menu.rs  mod.rs  score_screen.rs
crates/openclaw_mod/: Cargo.toml
crates/openclaw_mod/src/: asset_override.rs  lib.rs  mod_registry.rs
crates/openclaw_net/: Cargo.toml
crates/openclaw_net/src/: client.rs  lib.rs  lobby.rs  replay.rs  server.rs
crates/openclaw_rez/: Cargo.toml
crates/openclaw_rez/src/: ani_parser.rs  lib.rs  pid_parser.rs  rez_archive.rs  wwd_parser.rs
crates/openclaw_scripting/: Cargo.toml
crates/openclaw_scripting/src/: bindings.rs  lib.rs
crates/openclaw_scripting/src/api/: actor_api.rs  audio_api.rs  ui_api.rs
(+121 files in other folders)
