[workspace]
resolver = "2"
members = [
    "crates/openbee_core",
    "crates/openbee_scripting",
    "crates/openbee_net",
    "crates/openbee_mod",
    "crates/openbee_wallet",
    "crates/openbee_browser",
    "crates/openbee_agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gopvra/OpenBee"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & Error handling
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Internal crates
openbee_core = { path = "crates/openbee_core" }
openbee_scripting = { path = "crates/openbee_scripting" }
openbee_net = { path = "crates/openbee_net" }
openbee_mod = { path = "crates/openbee_mod" }
openbee_wallet = { path = "crates/openbee_wallet" }
openbee_browser = { path = "crates/openbee_browser" }
openbee_agent = { path = "crates/openbee_agent" }

[package]
name = "openbee"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openbee_core = { workspace = true }
openbee_wallet = { workspace = true }
openbee_browser = { workspace = true }
openbee_agent = { workspace = true }
openbee_scripting = { workspace = true }
openbee_net = { workspace = true }
openbee_mod = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
