[package]
name = "openbee_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Agent task system — assign tasks, auto-execute, report results"

[dependencies]
openbee_core = { workspace = true }
openbee_wallet = { path = "../openbee_wallet" }
openbee_browser = { path = "../openbee_browser" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
