[package]
name = "openbee_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core utilities for OpenBee AI Agent — events, security sandbox, i18n, tween"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
