[package]
name = "openbee_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visual level editor for OpenBee - tile/actor placement with egui"

[dependencies]
openbee_core = { workspace = true }
openbee_rez = { workspace = true }
openbee_game = { workspace = true }
egui = "0.31"
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
