[package]
name = "openbee_net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Networking layer for OpenBee Agent — TCP client/server, protocol, sync"

[dependencies]
openbee_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
byteorder = "1"
bincode = "1"
