[package]
name = "openbee_plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin system for OpenBee Agent — skill loading, registry, extensions"

[dependencies]
openbee_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
