[package]
name = "openbee_wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secure multi-chain crypto wallet SDK — local-only key management with ETH/SOL support"

[dependencies]
# Cryptographic primitives
sha2 = "0.10"
sha3 = "0.10"              # Keccak-256 for Ethereum addresses
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
aes-gcm = "0.10"           # AES-256-GCM authenticated encryption for keystore
rand = "0.8"
rand_core = "0.6"

# Elliptic curves
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }  # secp256k1 for Ethereum
ed25519-dalek = { version = "2", features = ["rand_core"] }     # Ed25519 for Solana

# Key derivation
argon2 = "0.5"             # Password-based KDF (Argon2id)

# Secure memory
zeroize = { version = "1", features = ["derive"] }

# Encoding
hex = "0.4"
bs58 = "0.5"               # Base58 for Solana addresses
base64 = "0.22"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling & logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Async HTTP for RPC
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
