[package]
name = "openclaw_game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Captain Claw game logic - components, systems, AI, levels, UI"

[dependencies]
openclaw_core = { workspace = true }
openclaw_rez = { workspace = true }
glam = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
rand = "0.8"
