[package]
name = "openclaw_mod"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mod support system for OpenClaw - mod loading, registry, asset override"

[dependencies]
openclaw_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
