[package]
name = "openclaw_net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multiplayer networking for OpenClaw - client/server, sync, replay"

[dependencies]
openclaw_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
byteorder = { workspace = true }
bincode = "1"
