[package]
name = "openclaw_rez"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLAW.REZ archive and asset format parser for OpenClaw"

[dependencies]
byteorder = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
